--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>HotelManagement</name>
 	<description>Demo project for Spring Boot</description>
+	<packaging>war</packaging>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -105,6 +106,7 @@
 			</plugin>
 
 		</plugins>
+		<finalName>HotelManagementJenkinsDemo</finalName>
 	</build>
 
 </project>
